[tool:pytest]
addopts = -v -rpPf --pydocstyle --flake8 --mypy
          --cov=xarray_events --cov-report=term-missing --cov-config=setup.cfg
flake8-max-line-length = 80
flake8-ignore =
    __init__.py F401

[mypy]
python_version = 3.7
warn_unreachable = False
implicit_reexport = True
namespace_packages = True
disallow_untyped_calls = False
disallow_untyped_defs = True
allow_untyped_globals = False
allow_redefinition = False
strict_equality = True
disallow_incomplete_defs = True
warn_incomplete_stub = False
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_no_return = True
warn_return_any = True
disallow_subclassing_any = True
disallow_any_unimported = False
disallow_any_expr = False
disallow_any_decorated = False
disallow_any_explicit = False
disallow_any_generics = False
warn_unused_ignores = True
warn_unused_configs = True
ignore_missing_imports = True
strict_optional = True
no_implicit_optional = True

[mypy-setup]
ignore_errors = True

[flake8]
max-line-length = 80
exclude =
    setup.py
ignore =
    *.py W504,E722
    __init__.py F401

[pydocstyle]
match=(?!test|__|setup).*\.py

[coverage:run]
omit = */__about__.py

[metadata]
description-file = README.rst
